# Differentially-Private-Federated-KNN

./: LICENSE  MANIFEST.in  PYPI_PREP_SUMMARY.md  README.md  RELEASE.md  benchmark_output.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
benchmarks/: run_benchmarks.py
dpfknn/: __init__.py  estimator.py  py.typed
dpfknn/configs/: __init__.py  params.py
dpfknn/data_io/: __init__.py  data_handler.py  fixed.py
dpfknn/parties/: __init__.py  client.py  server.py
dpfknn/utils/: __init__.py  evaluations.py  protocols.py  utils.py
examples/: basic_usage.py  fastlloyd_protocol.py  privacy_utility_tradeoff.py
reports/: BENCHMARK_REPORT.md  method_comparison.csv  privacy_utility_tradeoff.csv
tests/: test_dpfknn.py  test_e2e.py
