[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpfknn"
version = "0.1.0"
description = "Differentially Private Federated K-Means Clustering"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Bowenislandsong"}
]
license = {text = "MIT"}
maintainers = [
    {name = "Bowenislandsong"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["machine-learning", "clustering", "differential-privacy", "federated-learning", "k-means"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.1",
    "scipy>=1.8.0",
    "diffprivlib>=0.6.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
examples = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
]
benchmarks = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/Bowenislandsong/Differentially-Private-Federated-KNN"
Repository = "https://github.com/Bowenislandsong/Differentially-Private-Federated-KNN"
Documentation = "https://github.com/Bowenislandsong/Differentially-Private-Federated-KNN#readme"
"Bug Tracker" = "https://github.com/Bowenislandsong/Differentially-Private-Federated-KNN/issues"

[tool.setuptools]
packages = ["dpfknn", "dpfknn.configs", "dpfknn.data_io", "dpfknn.parties", "dpfknn.utils"]

[tool.setuptools.package-data]
dpfknn = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
